--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <br>
     <h2>All games belong to their respective owners</h2>
-    <img src="stickers-3d-monster.jpg-removebg-preview.png" alt="Image Description" width="1000px" height="1000px" />
+    <img src="monster.png" alt="Image Description" width="1000px" height="1000px" />
     <br/>
     <br/>
     <button onclick="window.open('https://mathplayground.com/grade_6_games.html')">Math Playground</button>
