--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>MMM Game Site</title>
+    <script src="blanker.js"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Delius&display=swap");
       * {
@@ -94,6 +95,6 @@
     <br/>
     <button onclick="window.open('https://whyy.pbslearningmedia.org/collection/pbs-math-club/')">PBS Math Club</button>
     <br>
-    <p>&copy Arteichoke Web LLC</p>
+    <button onclick="blank()">&copy Arteichoke Web LLC</button>
   </body>
 </html>
