--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         border-color: aqua;
         border-width: thick;
       }
+      #copy {
+        border-radius: 20px;
+        border: none;
+        padding: 5px;
+      }
     </style>
   </head>
   <body>
@@ -96,6 +101,6 @@
     <button onclick="window.open('https://whyy.pbslearningmedia.org/collection/pbs-math-club/')">PBS Math Club</button>
     <br/>
     <br/>
-    <button onclick="blank()">&copy Arteichoke Web LLC</button>
+    <button onclick="blank()" id="copy">&copy Arteichoke Web LLC</button>
   </body>
 </html>
