--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <title>MMM Game Site</title>
     <script src="blanker.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Awesome webpage with fun math games!" />
+    <link rel="icon" href="monster.png" />
+    <meta property="og:title" content="MMM Game Site" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://10091120-ctrl.github.io/Mega-Math-Monster/monster.png" />
+    <meta property="og:url" content="https://10091120-ctrl.github.io/Mega-Math-Monster/" />
+    <meta property="og:description" content="Awesome webpage with fun math games!" />
+    <meta property="og:site_name" content="MMM Game Site" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Delius&display=swap");
       * {
@@ -51,7 +61,7 @@
         padding: 5px;
       }
       #copy:hover {
-        
+        transform: none;
       }
     </style>
   </head>
